# PrefectFlows

./: .env.example  .gitignore  README.md  deploy.py  pyproject.toml
application/: database.py  envtools.py  loggers.py  tables.py  utils.py
flows/01_extract_sinapi_database/: .env.local.example  core.py  data_models.py  main.py  sinapi_api.py  sinapi_latest_views.sql
