[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "application"
version = "0.1.0"
description = "Application package"
requires-python = ">=3.10"

dependencies = [
    "requests==2.34.2",
    "polars[excel]==1.41.0",
    "xlsxwriter==3.2.9",
    "SQLAlchemy==2.0.50",
    "psycopg2-binary==2.9.12",
    "python-dotenv==1.2.2",
    "prefect==3.7.2"
]

[tool.setuptools]
packages = ["application"]